# dice-lib

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
docs/_static/css/: custom.css
src/: date.py
src/dice_lib/: __init__.py  _config.py  date.py  fs.py  glossary.py  hdfs.py  host.py  logger.py  parameters.py  ranges.py  unit.py  units.py  user.py
src/dice_lib/distributed/: __init__.py
src/dice_lib/fs/: __init__.py  _base.py  _davix.py  _gridftp.py  _hdfs.py  _posix.py  _s3.py  _xrootd.py
src/dice_lib/health/: __init__.py  apel_accounting.py
tests/: conftest.py  test_config.py  test_package.py
tests/data/: config.yaml
tests/fs/: test_generic.py
