[build-system]
requires = ["flit_core >=3.3"]
build-backend = "flit_core.buildapi"


[project]
name = "dice_lib"
authors = [
    { name = "UoB DICE team", email = "lcg-admin@bristol.ac.uk" },
]
maintainers = [
    { name = "The UoB DICE Team", email = "lcg-admin@bristol.ac.uk" },
]
license = { file = "LICENSE" }

description = "Python Library for DICE"
readme = "README.md"

requires-python = ">=3.6"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
]


dynamic = ["version"]
dependencies = [
    "beautifulsoup4 < 5",
    "dnspython>=2.2.0",
    "htcondor<23",
    "omegaconf>=2.1.2",
    "pandas",
    "paramiko",
    "plumbum",
    "pyhdfs",
    "typing_extensions >=3.7; python_version<'3.8'",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "sphinxcontrib-mermaid",
  "sphinx-inline-tabs",
  "furo>=2023.08.17",
]

[project.urls]
homepage = "https://github.com/uobdic/dice-lib"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]


[tool.pycln]
all = true


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
ignore_missing_imports = true


[tool.isort]
profile = "black"
